--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -712,7 +712,7 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="pending-payroll" role="tabpanel" aria-labelledby="visa-tab">
-                    <h3 class="table__heading">List</h3>
+                    <h3 class="table__heading">Visa Status</h3>
                     <table class="table table-borderless payroll__table">
                         <thead>
                         <tr>
@@ -753,20 +753,16 @@
                                 </spsn>
                             </td>
                             <td class="d-flex">
-                                    <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                <span class="action__btn mx-2">
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
+                                              fill="#F16532"/>
+                                    </svg>
+                                </span>
                                 <span class="action__btn">
-                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                                </span>
                             </td>
                         </tr>
                         <tr>
@@ -798,11 +794,7 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn">
-                                    <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                 </span>
                             </td>
                         </tr>
@@ -826,11 +818,7 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn">
-                                    <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                 </span>
                             </td>
                         </tr>
@@ -863,11 +851,7 @@
                                     </svg>
                                 </span>
                                 <span class="action__btn sync__payroll">
-                                    <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                     <div class="payroll__sync--container">
                                         <ul>
                                             <li>Sync with Payroll</li>
@@ -906,12 +890,8 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn">
-                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                                </span>
                             </td>
                         </tr>
                         <tr>
@@ -934,12 +914,8 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn">
-                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                                </span>
                             </td>
                         </tr>
                         <tr>
@@ -971,11 +947,7 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn recent__invitation">
-                                    <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                     <div class="invitation__recent--container">
                                         <ul>
                                             <li>Resent invitation</li>
@@ -1005,12 +977,8 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn">
-                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                                </span>
                             </td>
                         </tr>
                         <tr>
@@ -1033,12 +1001,8 @@
                                         </svg>
                                     </span>
                                 <span class="action__btn">
-                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                                </span>
                             </td>
                         </tr>
                         <tr>
@@ -1070,11 +1034,7 @@
                                     </svg>
                                 </span>
                                 <span class="action__btn">
-                                    <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
-                                         xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                              fill="#F16532"/>
-                                    </svg>
+                                    <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                 </span>
                             </td>
                         </tr>
