--- a/pages/check-mail.html
+++ b/pages/check-mail.html
@@ -25,7 +25,7 @@
   <script src="../resources/js/bootstrap.min.js"></script>
   <script src="../resources/js/bootstrap.bundle.min.js"></script>
   <script src="../resources/js/site.js"></script>
-  <title>Saucedlt</title>
+  <title>Check Mail</title>
 </head>
 <body>
 <section class="color__bg--section">
