--- a/pages/worksite-site-overview-2.html
+++ b/pages/worksite-site-overview-2.html
@@ -189,7 +189,7 @@
                             <div class="col-lg-4 col-md-4 col-4 ps-0">
                                 <div class="btn__jobs">
                                   <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                    Shortlist
+                                    Invite
                                 </div>
                             </div>
                         </div>
