--- a/pages/worksites-details.html
+++ b/pages/worksites-details.html
@@ -227,7 +227,7 @@
                             <div class="btn__sync">Filter</div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__sync">
+                            <div class="btn__jobs">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </div>
@@ -654,10 +654,10 @@
                                         <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
                                               fill="#F16532"/>
                                     </svg>
-                                    <div class="invitation__recent--container">
+                                    <div class="invitation__recent--container visa__action">
                                         <ul>
-                                            <li>Sync with Payroll</li>
-                                            <li>Remove</li>
+                                            <li>Send reminder to upload</li>
+                                            <li>Refresh vevo check</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -985,7 +985,7 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="uploaded-payroll" role="tabpanel" aria-labelledby="uploded-tab">
-                    <h3 class="table__heading">List</h3>
+                    <h3 class="table__heading">License/ Certificate Status</h3>
                     <table class="table table-borderless employee__table">
                         <thead>
                         <tr>
