--- a/pages/verification-code.html
+++ b/pages/verification-code.html
@@ -46,9 +46,9 @@
             <input type="text" id="digit-4" name="digit-4" data-next="digit-5" data-previous="digit-3" />
           </div>
           <button class="sign__in--btn" type="submit">Continue</button>
-          <div class="c-hr mb-3"></div>
-          <p>Did not receive the email? Check your spam filter, or</p>
-          <button class="secondary__btn">Resend Code</button>
+          <div class="c-hr mb-4"></div>
+          <p class="text-center m-0">Did not receive the email? Check your spam filter, or</p>
+          <button class="secondary__btn mt-3">Resend Code</button>
         </form>
       </div>
     </div>
