--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -256,12 +256,30 @@
                                                             <path d="M8.00008 0C4.66675 0 1.82008 2.07333 0.666748 5C1.82008 7.92667 4.66675 10 8.00008 10C11.3334 10 14.1801 7.92667 15.3334 5C14.1801 2.07333 11.3334 0 8.00008 0ZM8.00008 8.33333C6.16008 8.33333 4.66675 6.84 4.66675 5C4.66675 3.16 6.16008 1.66667 8.00008 1.66667C9.84008 1.66667 11.3334 3.16 11.3334 5C11.3334 6.84 9.84008 8.33333 8.00008 8.33333ZM8.00008 3C6.89341 3 6.00008 3.89333 6.00008 5C6.00008 6.10667 6.89341 7 8.00008 7C9.10675 7 10.0001 6.10667 10.0001 5C10.0001 3.89333 9.10675 3 8.00008 3Z" fill="#616161"/>
                                                         </svg>
                                                     </div>
-                                                    <div class="account__password--strength">
-                                                        <span class="bar__empty account__password--bar"></span>
-                                                        <span class="bar__empty account__password--bar"></span>
-                                                        <span class="bar__empty account__password--bar"></span>
-                                                        <span class="bar__empty account__password--bar"></span>
-                                                        <span class="account__password--label">Week </span><span>Password</span>
+                                                    <div class="password-strength-group account__password--strength" data-strength="">
+                                                        <div id="password-strength-meter " class="password-strength-meter">
+                                                            <span class="bar__empty"></span>
+                                                            <span class="bar__empty"></span>
+                                                            <span class="bar__empty"></span>
+                                                            <span class="bar__empty"></span>
+                                                        </div>
+                                                        <div class="password-strength-message">
+                                                            <div class="message-item">
+                                                                Weak Password
+                                                            </div>
+
+                                                            <div class="message-item">
+                                                                Medium
+                                                            </div>
+
+                                                            <div class="message-item">
+                                                                Strong
+                                                            </div>
+
+                                                            <div class="message-item">
+                                                                Very Strong!
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 col-md-6 col-12">
