--- a/pages/employee-details.html
+++ b/pages/employee-details.html
@@ -458,9 +458,9 @@
                             <div class="details__container">
                                 <div class="accordion" id="accordionExample">
                                     <div class="accordion-item">
-                                        <h3 class="accordion-button collapsed" id="headingOne" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Experience</h3>
+                                        <h3 class="accordion-button collapsed" id="headingOne" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Experience</h3>
                                         <div class="c-border"></div>
-                                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                        <div id="collapseOne" class="accordion-collapse collapse display_acc" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
                                                 <table class="table table-borderless">
                                                     <thead>
@@ -509,7 +509,7 @@
                                     <div class="accordion-item">
                                         <h3 class="accordion-button collapsed" id="headingOne2" data-bs-toggle="collapse" data-bs-target="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">Education</h3>
                                         <div class="c-border"></div>
-                                        <div id="collapseOne2" class="accordion-collapse collapse" aria-labelledby="headingOne2" data-bs-parent="#accordionExample2">
+                                        <div id="collapseOne2" class="accordion-collapse collapse display_acc" aria-labelledby="headingOne2" data-bs-parent="#accordionExample2">
                                             <div class="accordion-body">
                                                 <table class="table table-borderless">
                                                     <thead>
